Bleeped out sensitive info, this won't run btw.

--- a/my_scrapers.ipynb
+++ b/my_scrapers.ipynb
@@ -481,16 +481,16 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Aberdeen A Acc GBP\n",
+        "#@title <> \n",
         "\n",
-        "website_link = 'https://www.abrdn.com/en/switzerland/institutional/fund-details/aberdeen-standard-sicav-i-indian-equity-fund/a-acc-gbp/lu0231462077'\n",
+        "website_link =  # '\n",
         "get_website(website_link, '//button[@id=\"onetrust-accept-btn-handler\"]')\n",
         "\n",
         "# Find all hrefs containing pdf in the given website \n",
         "pdfs = chrome.find_elements(By.XPATH, \"//a[contains(@href, 'pdf')]\")\n",
-        "names = [\"Monthly Factsheet\", \"KID\", \"Prospectus\", \"Sustainable Investment Approach\"]\n",
+        "names = ['']\n",
         "href = get_pdfs('\"pdf\"',names)\n",
-        "download_pdfs(\"Aberdeen\", \"A Acc GBP\", href)"
+        "download_pdfs("", href)"
       ],
       "metadata": {
         "id": "YtMpSerubP2K"
@@ -501,7 +501,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Aberdeen SICAV II and others (incomplete)"
+        "#@title"
       ],
       "metadata": {
         "cellView": "form",
@@ -513,9 +513,9 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Antipodes Global Fund\n",
+        "#@title ",
         "\n",
-        "website_link = \"https://antipodes.com/ucits-funds/antipodes-global-fund-ucits/\"\n",
+        "website_link = \"\"\n",
         "get_website(website_link)\n",
         "# Special maneuvering \n",
         "  # Accept conditions \n",
@@ -530,14 +530,14 @@
         "chrome.find_element(By.XPATH, '//*[@id=\"fourth-tab\"]').click()\n",
         "\n",
         "href = chrome.find_element(By.XPATH, '//a[contains(@href, \"P-Class\")]').get_attribute(\"href\")\n",
-        "name = \"UCITS P Share Class USD\"\n",
+        "name = \"<>""\n",
         "\n",
         "data = requests.get(href)\n",
-        "if not os.path.exists(\"Antipodes\"):\n",
-        "  os.mkdir(\"Antipodes\")\n",
-        "  #if not os.path.exists(\"Aberdeen/USD\"):\n",
-        "    #os.mkdir(\"Aberdeen/USD\")\n",
-        "fl = \"Antipodes\"\n",
+        "if not os.path.exists(\"\"):\n",
+        "  os.mkdir(\"\")\n",
+        "  #if not os.path.exists(\"\"):\n",
+        "    #os.mkdir(\"\")\n",
+        "fl = \"\"\n",
         "with open(os.path.join(fl,name+ \".pdf\"), 'wb') as download:\n",
         "  download.write(data.content)"
       ],
@@ -551,9 +551,9 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title UBAM Capital Group (requires JS rendering?)\n",
+        "#@title (requires JS rendering?)\n",
         "\n",
-        "website_link = \"https://www.capitalgroup.com/individual-investors/hk/en\"\n",
+        "website_link = \"\"\n",
         "get_website(website_link)\n",
         "chrome.delete_all_cookies()\n",
         "showscreen(chrome)"
@@ -568,16 +568,16 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Colchester Global Unhedged Class B\n",
+        "#@title \n",
         "# Do we need the financial accounts on this page?\n",
         "\n",
-        "website_link = 'https://colchesterglobal.com/wp-content/uploads/fact-sheets/Fact-sheet-SAEnglish-GUUB-USD-Unhedged-Accumulation-IE00BJLJZQ94.pdf'\n",
+        "website_link = ''\n",
         "data = requests.get(website_link)\n",
-        "os.mkdir(\"Colchester Global\")\n",
-        "  #if not os.path.exists(\"Aberdeen/USD\"):\n",
-        "    #os.mkdir(\"Aberdeen/USD\")\n",
-        "fl = \"Colchester Global\"\n",
-        "with open(os.path.join(fl,\"B USD Acc Unhedged\"+ \".pdf\"), 'wb') as download:\n",
+        "os.mkdir(\"\")\n",
+        "  #if not os.path.exists(\"/""):\n",
+        "    #os.mkdir(\"\")\n",
+        "fl = \"\"\n",
+        "with open(os.path.join(fl,\"\"+ \".pdf\"), 'wb') as download:\n",
         "  download.write(data.content)"
       ],
       "metadata": {
@@ -592,11 +592,11 @@
       "source": [
         " #@title Momentum Harmony E Class \n",
         "\n",
-        "website_link = \"https://momentum.co.uk/funds/cautious-income\"\n",
+        "website_link = \"""\n",
         "get_website(website_link) # No cookies\n",
-        "names = [\"USD E Class\", \"GBP E Class\", \"EUR E Class\"]\n",
+        "names = [""]\n",
         "hrefs = get_pdfs(\"'class-e-acc.pdf'\", names)\n",
-        "download_pdfs(\"Momentum\", \"Harmony Cautious Income\", hrefs)"
+        "# download_pdfs(\", \""", hrefs)"
       ],
       "metadata": {
         "id": "lb_DHfExXS-c"
@@ -607,11 +607,11 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Momentum Equity Funds\n",
+        "#@title \n",
         "\n",
-        "website_link = \"https://momentum.co.uk/funds/global-sustainable-equity-fund\"\n",
+        "website_link = \"\"\n",
         "get_website(website_link)\n",
-        "names = [\"Sustainable Equity Fund A USD\",\"Global Equity Fund\" ]\n",
+        "names = [\"D\",\"\" ]\n",
         "hrefs = "
       ],
       "metadata": {
@@ -668,7 +668,7 @@
         "# Find all hrefs containing pdf in the given website \n",
         "pdfs = chrome.find_elements(By.XPATH, \"//a[contains(@href, 'pdf')]\")\n",
         "#names = chrome.find_elements(By.XPATH, \"//a[contains(@href, 'pdf')]/span\") # fix this, it's extracting the wrong names\n",
-        "names = [\"Monthly Factsheet\", \"KID\", \"Prospectus\", \"Sustainable Investment Approach\"]\n",
+        "names = [\"]\n",
         "\n",
         "#extract exact hrefs for the pdfs\n",
         "href = {}\n",
@@ -692,12 +692,12 @@
         "\n",
         "for i in href: \n",
         "  data = requests.get(href[i])\n",
-        "  if not os.path.exists(\"Aberdeen\"):\n",
-        "    os.mkdir(\"Aberdeen\")\n",
-        "    #if not os.path.exists(\"Aberdeen/USD\"):\n",
-        "      #os.mkdir(\"Aberdeen/USD\")\n",
+        "  if not os.path.exists(\"""):\n",
+        "    os.mkdir(\"\")\n",
+        "    #if not os.path.exists(\"\"):\n",
+        "      #os.mkdir(\"\")\n",
         "  fl = \"Aberdeen\"\n",
-        "  with open(os.path.join(fl,i + ' A Acc USD'+ \".pdf\"), 'wb') as download:\n",
+        "  with open(os.path.join(fl,i + ' '+ \".pdf\"), 'wb') as download:\n",
         "    download.write(data.content)"
       ],
       "metadata": {
@@ -732,9 +732,9 @@
         "for i in href: \n",
         "  data = requests.get(href[i])\n",
         "  if not os.path.exists(\"Aberdeen\"):\n",
-        "    os.mkdir(\"Aberdeen\")\n",
-        "  fl = \"Aberdeen\"\n",
-        "  with open(os.path.join(fl,i + \" A Acc GBP.pdf\"), 'wb') as download:\n",
+        "    os.mkdir(\""")\n",
+        "  fl = \"\"\n",
+        "  with open(os.path.join(fl,i + \" f\"), 'wb') as download:\n",
         "    download.write(data.content)\n",
         "\n"
       ],
